Update submit buttons for consistency

--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -67,7 +67,7 @@ select {
     display: inline-block;
     line-height: .75em;
 
-    input[type=submit] {
+    button[type=submit] {
         display: none;
     }
 }
