--- a/templates/application/add_application.twig
+++ b/templates/application/add_application.twig
@@ -91,7 +91,7 @@
         {% endif %}
 
         <p>
-            <button class="btn btn--action" type="submit">Add Application</button>
+            <button type="submit" class="btn btn--action">Add Application</button>
             <a href="{{ uriFor('applications') }}">Cancel</a>
         </p>
 
