--- a/templates/application/edit_application.twig
+++ b/templates/application/edit_application.twig
@@ -98,7 +98,7 @@
         {% endif %}
 
         <p>
-            <button class="btn btn--action" type="submit">Save Changes</button>
+            <button type="submit" class="btn btn--action">Save Changes</button>
             <a href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a>
         </p>
 
