--- a/templates/environment/add_environment.twig
+++ b/templates/environment/add_environment.twig
@@ -36,7 +36,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Add Environment</button>
+            <button type="submit" class="btn btn--action">Add Environment</button>
             <a href="{{ uriFor('environments') }}">Cancel</a>
         </p>
 
