--- a/templates/idp/add_idp.twig
+++ b/templates/idp/add_idp.twig
@@ -15,7 +15,7 @@
         {{ form_macros.csrf_input('id_providers.add') }}
 
         <p>
-            <button class="btn btn--action" type="submit">Add IDP</button>
+            <button type="submit" class="btn btn--action">Add IDP</button>
             <a href="{{ uriFor('id_providers') }}">Cancel</a>
         </p>
 
