--- a/templates/organization/add_organization.twig
+++ b/templates/organization/add_organization.twig
@@ -26,7 +26,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Add Organization</button>
+            <button type="submit" class="btn btn--action">Add Organization</button>
             <a href="{{ uriFor('applications') }}">Cancel</a>
         </p>
     </form>
