--- a/templates/organization/edit_organization.twig
+++ b/templates/organization/edit_organization.twig
@@ -32,7 +32,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Save Changes</button>
+            <button type="submit" class="btn btn--action">Save Changes</button>
             <a href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a>
         </p>
     </form>
