--- a/templates/permissions/partial.add_permissions.twig
+++ b/templates/permissions/partial.add_permissions.twig
@@ -69,7 +69,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Add Permissions</button>
+            <button type="submit" class="btn btn--action">Add Permissions</button>
             <a href="{{ uriFor(perm_mode, entity_params) }}">Cancel</a>
         </p>
     </form>
