--- a/templates/release/releases.twig
+++ b/templates/release/releases.twig
@@ -30,7 +30,7 @@
             value="{{ search_filter }}"
             placeholder="Examples: Branch name, commit SHA, pull/#, tag/# or env:$ENV_NAME">
 
-        <input class="btn" type="submit" value="Filter">
+        <button type="submit" class="btn">Filter</button>
 
         {% if search_filter %}
             <a class="btn btn--action" href="{{ uriFor('release.history', {'application': application.id}) }}">Reset</a>
