--- a/templates/release/start_release.twig
+++ b/templates/release/start_release.twig
@@ -149,7 +149,7 @@
 
         <p>
             {% if pushables %}
-                <button class="btn btn--action" type="submit">Deploy this Build</button>
+                <button type="submit" class="btn btn--action">Deploy this Build</button>
             {% else %}
                 {{ macros.disabled_button('Deploy this Build') }}
             {% endif %}
