--- a/templates/signin.twig
+++ b/templates/signin.twig
@@ -59,7 +59,7 @@
         </ul>
 
         <p>
-            <button class="btn" type="submit">Sign In</button>
+            <button type="submit" class="btn">Sign In</button>
         </p>
     </form>
 {% endblock %}
@@ -80,7 +80,7 @@
         </ul>
 
         <p>
-            <button class="btn" type="submit">Sign In</button>
+            <button type="submit" class="btn">Sign In</button>
         </p>
     </form>
 {% endblock %}
