--- a/templates/signin_setup.twig
+++ b/templates/signin_setup.twig
@@ -36,7 +36,7 @@
         </ul>
 
         <p>
-            <button class="btn" type="submit">Save Changes</button>
+            <button type="submit" class="btn btn--action">Save Changes</button>
         </p>
 
     </form>
