--- a/templates/target-template/add_template.twig
+++ b/templates/target-template/add_template.twig
@@ -110,7 +110,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Add Template</button>
+            <button type="submit" class="btn btn--action">Add Template</button>
             <a href="{{ uriFor('templates') }}">Cancel</a>
         </p>
 
