--- a/templates/target-template/edit_template.twig
+++ b/templates/target-template/edit_template.twig
@@ -73,7 +73,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Save Changes</button>
+            <button type="submit" class="btn btn--action">Save Changes</button>
             <a href="{{ uriFor('template', {'template': template.id}) }}">Cancel</a>
         </p>
 
