--- a/templates/user/add_user.twig
+++ b/templates/user/add_user.twig
@@ -82,7 +82,7 @@
         {% endif %}
 
         <p>
-            <button class="btn btn--action" type="submit">Add User</button>
+            <button type="submit" class="btn btn--action">Add User</button>
             <a href="{{ uriFor('users') }}">Cancel</a>
         </p>
 
