--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -36,7 +36,7 @@
         </p>
 
         <p>
-            <button class="btn btn--action" type="submit">Save Preferences</button>
+            <button type="submit" class="btn btn--action">Save Preferences</button>
         </p>
     </form>
 {% endblock %}
@@ -54,7 +54,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Generate Token</button>
+            <button type="submit" class="btn btn--action">Generate Token</button>
         </p>
     </form>
 {% endblock %}
