--- a/templates/admin/hal_bootstrap.twig
+++ b/templates/admin/hal_bootstrap.twig
@@ -54,7 +54,7 @@
         </ul>
 
         <p>
-            <button class="btn" type="submit">Save Changes</button>
+            <button type="submit" class="btn btn--action">Save Changes</button>
         </p>
 
     </form>
