--- a/templates/application/macros.applications.twig
+++ b/templates/application/macros.applications.twig
@@ -11,22 +11,26 @@
         <td>
             {% if application.id in current_user.setting('favorite_applications') %}
                 <form method="post"
-                      action="{{ uriFor('settings.favorite_applications.remove', {'application': application.id}) }}"
+                      action="{{ uriFor('api_internal.settings.favorite_applications.remove', {'application': application.id}) }}"
                       data-app-id="{{ application.id }}"
                       class="form--inline js-fav">
                     <label class="fav-added">
-                        <input type="submit">
-                        {{ macros.icon('star-2', '', 'Remove from favorites') }}
+                        <button type="submit"></button>
+                        <span class="hint--left" aria-label="Remove from favorites">
+                            {{ macros.icon('star-2') }}
+                        </span>
                     </label>
                 </form>
             {% else %}
                 <form method="post"
-                      action="{{ uriFor('settings.favorite_applications.add', {'application': application.id}) }}"
+                      action="{{ uriFor('api_internal.settings.favorite_applications.add', {'application': application.id}) }}"
                       data-app-id="{{ application.id }}"
                       class="form--inline js-fav">
-                    <label class="form--fav__label fav-normal">
-                        <input type="submit">
-                        {{ macros.icon('star-2', '', 'Add to favorites') }}
+                    <label class="fav-normal">
+                        <button type="submit"></button>
+                        <span class="hint--left" aria-label="Add to favorites">
+                            {{ macros.icon('star-2') }}
+                        </span>
                     </label>
                 </form>
             {% endif %}
