--- a/templates/environment/edit_environment.twig
+++ b/templates/environment/edit_environment.twig
@@ -48,7 +48,7 @@
         </ul>
 
         <p>
-            <button class="btn btn--action" type="submit">Save Changes</button>
+            <button type="submit" class="btn btn--action">Save Changes</button>
             <a href="{{ uriFor('environment', {'environment': environment.id}) }}">Cancel</a>
         </p>
 
