--- a/templates/user/placeholder.remove_github_token.twig
+++ b/templates/user/placeholder.remove_github_token.twig
@@ -3,18 +3,16 @@
 {% set page_title = 'Remove GitHub Authorization' %}
 
 {% block content %}
-    <h2>{{ page_title }}</h2>
-
     <div class="meta-box">
         <h1>Are you sure?</h1>
 
         <p>This will revoke GitHub authorization and disable updates to GitHub when you deploy a build.</p>
 
-        <form class="form-wrapper" method="post">
-            <ul>
-                <li><input class="btn btn--destructive" type="submit" value="Remove"></li>
-                <li><a class="btn" href="javascript:history.go(-1)">Cancel</a></li>
-            </ul>
+        <form method="post">
+            <p>
+                <button type="submit" class="btn btn--destructive">Remove</button>
+                <a href="javascript:history.go(-1)">Cancel</a>
+            </p>
         </form>
     </div>
 
