--- a/templates/vcs/add_vcs.twig
+++ b/templates/vcs/add_vcs.twig
@@ -15,7 +15,7 @@
         {{ form_macros.csrf_input('vcs_providers.add') }}
 
         <p>
-            <button class="btn btn--action" type="submit">Add VCS</button>
+            <button type="submit" class="btn btn--action">Add VCS</button>
             <a href="{{ uriFor('vcs_providers') }}">Cancel</a>
         </p>
 
