Fix template removal

--- a/templates/admin/audit_history.twig
+++ b/templates/admin/audit_history.twig
@@ -45,7 +45,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">No logs found.</td>
+                    <td colspan="4">No events found.</td>
                 </tr>
             {% endfor %}
         </tbody>
