--- a/sass/elements.scss
+++ b/sass/elements.scss
@@ -98,6 +98,7 @@ h6 {
 
 pre, code {
     font-family: menlo, monospace, sans-serif;
+    font-size: .75em;
 
     color: $red;
     background: $light-grey;
