--- a/templates/release/macros.start_deploy.twig
+++ b/templates/release/macros.start_deploy.twig
@@ -1,15 +1,41 @@
-{% macro render_deployment_row(target, release, selected, can_user_deploy, can_deploy_now) %}
+{% macro deploy_targets_table(targets, selected, can_user_deploy, can_deploy_now) %}
+    {% import _self as macros %}
+
+    <table class="table--spacing-medium">
+        <thead>
+            <tr>
+                <th>Target</th>
+                <th class="t30">Last Code Deployed</th>
+                <th class="t30">Last Deployed On</th>
+                <th class="t15"></th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {% if targets %}
+                {% for target in targets %}
+                    {{ macros.deploy_target_row(target, target.lastJob, selected, can_user_deploy, can_deploy_now) }}
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="4">No targets available.</td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
+{% endmacro %}
+
+{% macro deploy_target_row(target, release, selected, can_user_deploy, can_deploy_now) %}
     {% import 'macros.twig' as macros %}
     {% import 'macros.git.twig' as git_macros %}
 
     {% set is_selected = (target.id == selected) %}
     {% set needs_credentials = target.isAWS() and not target.credential %}
+    {% set target_tooltip = target.formatType() ~ ': ' ~ target.formatParameters() %}
 
     <tr>
         <td>
-            <span class="hint--right" aria-label="{{ target.formatType() ~ ': ' ~ target.formatParameters() }}">
-                {{ target.name }}
-            </span>
+            <span class="hint--right" aria-label="{{ target_tooltip }}">{{ target.name }}</span>
         </td>
         {% if release %}
             {% set build = release.build %}
