--- a/templates/vcs/vcs_providers.twig
+++ b/templates/vcs/vcs_providers.twig
@@ -29,7 +29,7 @@
             <thead>
                 <tr>
                     <th class="t15">ID</th>
-                    <th>Type</th>
+                    <th class="t15">Type</th>
                     <th>Name</th>
                     <th>Details</th>
                 </tr>
