Update validator di service names to be consistent

--- a/templates/macros.twig
+++ b/templates/macros.twig
@@ -250,3 +250,16 @@ Build <a href="/build/123456">123456</a>
     {%- endif -%}
 {% endmacro %}
 
+{% macro output_parameter(entity, parameter_name, default) -%}
+    {% set default_value = default|default('Not defined') %}
+    {% set value = entity.parameter(parameter_name) %}
+
+    {%- if value|length > 0 -%}
+        <p>
+            <code>{{ value }}</code>
+        </p>
+    {%- else -%}
+        <p>{{ default_value }}</p>
+    {%- endif -%}
+{%- endmacro %}
+
